<resources>

    <!-- Login Page & Chat url -->
    <string name="app_name">Codechef Mentor</string>
    <string name="login">LOGIN</string>
    <string name="client_id">dd0b7e65f63265923d3686cdbbabf163</string>
    <string name="client_secret">1b13041d6b891cb3369b1218c15987c3</string>
    <string name="redirect_to_backend">http://149.129.145.214/users/auth/codechef</string>
    <string name="chat_url">http://149.129.145.214/cable?auth_code=</string>
    <string name="redirect_uri">mentor://callback</string>
    <string name="response_type">code</string>
    <string name="refresh_token">refresh_token</string>
    <string name="login_in_successfull">Successfully Logged In</string>
    <string name="unsuccessfull_login">Couldn\'t Log in. Please Try Again</string>
    <string name="content_type">application/json</string>
    <string name="authorization_code">authorization_code</string>

    <!--Added to show error messages-->
    <string name="no_internet">Interent Connection not found</string>
    <string name="error_message">Oops Some Error Occured</string>

    <!--Added for Home Activity-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="error_fetching_user_profile">Unable to fetch User Profile</string>
    <string name="my_mentors">My Mentors</string>
    <string name="my_students">My Students</string>
    <string name="enter_username">Enter Username</string>
    <string name="search">Search</string>
    <string name="valid_username">Please enter a valid username!</string>
    <string name="fullname">fullname</string>
    <string name="username">username</string>
    <string name="no_user_found">No user found for this search</string>

    <!--Added for mentor and student cards-->
    <string name="send_mentor_request">Send Mentor Request</string>
    <string name="mentor_request_sent">Mentor Request Sent</string>
    <string name="no_data">no_data</string>
    <string name="database_error">database error</string>
    <string name="student_request_pending">student request pending</string>
    <string name="approved">Start Chatting</string>
    <string name="my_approved_students">My Students</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="my_approved_mentors">My Mentors</string>
    <string name="app_title">Codechef Mentor</string>


    <!--Added for FAB button-->
    <string name="general">General Discussion</string>
    <string name="acm">ACM</string>
    <string name="ioi">IOI</string>
    <string name="placements_discuss">Placements</string>

    <!--Added for contest fragments-->
    <string name="no_contest_data">No Data to show. Please try again or check contest timings.</string>

    <!--Added navigation strings-->
    <string name="profile">Profile</string>
    <string name="contests">Contests</string>
    <string name="leaderboard">Top Mentors</string>
    <string name="dev">Developers</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="save_as_pdf">Save as PDF</string>


    <!-- Activity Headers -->
    <string name="search_header">Search Users</string>
    <string name="my_profile_header">My Profile</string>
    <string name="user_profile_header">Codechef User</string>
    <string name="my_students_header">My Students</string>
    <string name="my_mentors_header">My Mentors</string>
    <string name="chat">Chat</string>
    <string name="leaderboard_heading">LeaderBoard</string>
    <string name="contest_header">Contests</string>
    <string name="dev_header">Devs</string>

</resources>
